<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RadioGroup
        android:id="@+id/radioAddSnooze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/snooze1Minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snooze_1_minute" />

        <RadioButton
            android:id="@+id/snooze5Minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snooze_5_minutes" />


        <RadioButton
            android:id="@+id/snooze15Minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snooze_15_minutes" />


    </RadioGroup>


    <Button
        android:id="@+id/btnSnooze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/snooze"/>

</LinearLayout>