<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:padding="@dimen/_16sdp">

        <LinearLayout
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/purple_700"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/_14sdp"
                android:text="@string/to_send_a_request_to_another_friend_please_sign_in_with_your_email"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/register_now"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>