<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linear"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".caring.view.AdditionalCare">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgViewProfile"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_circle_background_color="@color/purple_500"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="2"
        android:backgroundTint="#DAD5D5"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/txtViewTitle"
                android:src="@drawable/gmail" />

            <TextView
                android:id="@+id/txtViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtViewTitle"
                android:hint="@string/emalHint"
                android:paddingTop="48dp"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="57dp" />

            <Button
                android:id="@+id/btnSendInvitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtTxtEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:text="@string/sendInvitation" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>