<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/infoDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_card"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomSheet"
        android:background="@drawable/custom_card"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_minimize_24"
            android:id="@+id/btnCancel"
            android:background="#fff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/dialogTitle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitle"
                android:layout_centerHorizontal="true"
                android:id="@+id/edtLayout"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#fff"
                app:boxCornerRadiusBottomEnd="24dp"
                app:errorTextColor="#D81313"
                android:elevation="8dp"
                app:hintTextColor="#888888"
                app:boxStrokeColor="#2196F3"
                app:boxStrokeWidth="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPatientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_info_24"
                    android:hint="@string/hintInfoDialog"
                    android:drawablePadding="16dp"
                    android:inputType="textWebEmailAddress"
                    android:maxLength="50"
                    android:padding="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtLayout"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:id="@+id/txtSuccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/succesfullyAdded"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imgSuccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_accept"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSendInfoDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_marginTop="8dp"
                android:text="@string/btnSend" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendEmail"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSendInfoDialog"
                android:layout_centerHorizontal="true"
                app:cornerRadius="6dp"
                android:text="Send Email"
                app:icon="@drawable/gmail"
                app:iconSize="36dp"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>