<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175sp"
        android:background="@drawable/header"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="wrap_content"
            android:layout_height="38sp"
            app:srcCompat="@drawable/guest"
            android:contentDescription="@null" />


        <TextView
            android:id="@+id/txtHeaderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:text="@string/guest"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtHeaderEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:textColor="@color/purple_700"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:textColor="@color/purple_700"
            android:text="@string/medication_App"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/layoutRegister"
            android:layout_margin="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/googlle"
                android:contentDescription="@null" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_marginStart="8sp"
                android:text="@string/register"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>


        <LinearLayout
            android:id="@+id/layoutInfo"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="28sp"
                android:layout_height="28sp"
                app:srcCompat="@drawable/ic_baseline_info_24"
                android:contentDescription="@null" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_marginStart="8sp"
                android:text="@string/info"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>


    </LinearLayout>



</LinearLayout>